--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,6 +1,5 @@
-<div style="text-align: center;">
-  <h1>
+<app-nav></app-nav>
+<h1>
     Welcome to {{ title }}!
-  </h1>
-  <app-value></app-value>
-</div>
+</h1>
+<app-value></app-value>
