--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -28,12 +28,15 @@
     </div>
   </div>
 
-  <form class="form-inline my-2 my-lg-0">
+  <!--  we tell our form that its a template form using the template variable by assigning ngform directive  -->
+  <!--  we use ng submit directive to submit the form  -->
+  <form #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+    <!--  we use ngModel to activate data binding between the component & the html  -->
     <input class="form-control mr-sm-2" type="text" name="username" 
-      placeholder="Username">
+      placeholder="Username" required [(ngModel)]="model.username">
     <input class="form-control mr-sm-2" type="password" name="password" 
-      placeholder="Password">
-    <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
+      placeholder="Password" required [(ngModel)]="model.password">
+    <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
   </form>
 
 </nav>
