--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -12,11 +12,11 @@
       <a class="nav-link" href="#">Messages</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link">Logout</a>
+      <a (click)="logout()" class="nav-link">Logout</a>
     </li>
   </ul>
 
-  <div class="dropdown">
+  <div *ngIf="loggedIn()" class="dropdown">
     <a class="dropdown-toggle text-light">
       Welcome User
     </a>
@@ -24,13 +24,13 @@
     <div class="dropdown-menu">
       <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Edit Profile</a>
       <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i> Logout</a>
+      <a class="dropdown-item" href="#"><i class="fa fa-sign-out" ></i> Logout</a>
     </div>
   </div>
 
   <!--  we tell our form that its a template form using the template variable by assigning ngform directive  -->
   <!--  we use ng submit directive to submit the form  -->
-  <form #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+  <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
     <!--  we use ngModel to activate data binding between the component & the html  -->
     <input class="form-control mr-sm-2" type="text" name="username" 
       placeholder="Username" required [(ngModel)]="model.username">
