--- a/DatingApp-SPA/src/app/register/register.component.html
+++ b/DatingApp-SPA/src/app/register/register.component.html
@@ -18,7 +18,7 @@
   </div>
 
   <div class="form-group text-center">
-    <button class="btn btn-success" type="submit" (click)="register()">Register</button>
+    <button class="btn btn-success" type="submit">Register</button>
     <button class="btn btn-default" type="button" (click)="cancel()">Cancel</button>
   </div>
   
