--- a/DatingApp-SPA/src/app/register/register.component.html
+++ b/DatingApp-SPA/src/app/register/register.component.html
@@ -6,12 +6,12 @@
     <input type="text" class="form-control" required name="username" [(ngModel)]="model.username" placeholder="Username">
   </div>
   
-  <div class="form-group">
+  <!-- <div class="form-group">
    <label for="favouriteValue">what is your favourite value?</label>
    <select class="form-control" name="" id="favouriteValue">
      <option *ngFor="let value of valuesFromHome" [value]="value">{{value.name}}</option>
    </select>
-  </div>
+  </div> -->
 
   <div class="form-group">
     <input type="password" class="form-control" required name="password" [(ngModel)]="model.password" placeholder="Password">
