--- a/DatingApp-SPA/src/styles.css
+++ b/DatingApp-SPA/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+/*@import '../node_modules/font-awesome/css/font-awesome.min.css';*/
+/*@import '../node_modules/primeicons/primeicons.css';*/
+/*@import '../node_modules/primeng/resources/themes/nova-colored/theme.css';*/
+
+/*@import '../node_modules/primeng/resources/primeng.min.css';*/
+/*@import '..node_modules/primeng/resources/themes/nova-colored/theme.css';*/
