--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -30,7 +30,26 @@
       </div>  
     </div>
     <div class="col-sm-8">
-
+      <div class="tab-panel">
+        <tabset class="member-tabset">
+          <tab heading="About {{user?.knownAs}}">
+            <h4>Description</h4>
+            <p>{{user?.introduction}}</p>
+            <h4>Looking For</h4>
+            <p>{{user?.lookingFor}}</p>
+          </tab>
+          <tab heading="Interests">
+            <h4>Interest</h4>
+            <p>{{user?.interests}}</p>
+          </tab>
+          <tab heading="Photos">
+            <h4>Photos will go here</h4>
+          </tab>
+          <tab heading="Messages">
+            <h4>Messages will go here</h4>
+          </tab>
+        </tabset>
+      </div>
     </div>
   </div>
 </div>
