--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -10,7 +10,7 @@
           <a class="nav-link" [routerLink]="['/lists']">Lists</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [routerLink]="['/messages']"  >Messages</a>
+          <a class="nav-link" [routerLink]="['/messages']">Messages</a>
         </li>
       </ul>
     
@@ -20,7 +20,7 @@
         </a>
       
         <div class="dropdown-menu mt-3" *dropdownMenu>
-          <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Edit Profile</a>
+          <a class="dropdown-item" [routerLink]="['/member/edit']"><i class="fa fa-user"></i> Edit Profile</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out" ></i> Logout</a>
         </div>
