--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -4,7 +4,7 @@
       <h1>Your Profile</h1>
     </div>
     <div class="col-sm-8">
-      <div class="alert alert-info">
+      <div *ngIf="editForm.dirty" class="alert alert-info">
         <p><strong>Information:</strong> You have made changes. Any unsaved changes will be lost</p>
       </div>
     </div>    
@@ -32,7 +32,7 @@
           </div>  
         </div>
         <div class="card-footer">   
-            <button class="btn btn-success btn-block">Save Changes</button>      
+            <button [disabled]="!editForm.dirty" form="editForm" class="btn btn-success btn-block">Save Changes</button>      
         </div>
       </div>  
     </div>
@@ -40,7 +40,7 @@
       <div class="tab-panel">
         <tabset class="member-tabset">
           <tab heading="Edit Profile">
-            <form action="">
+            <form #editForm="ngForm" id="editForm" (ngSubmit)="updateUser()" action="">
               <h4>Description</h4>
               <textarea name="introduction" rows="6" class="form-control"
                 [(ngModel)]="user.introduction"></textarea>
