--- a/DatingApp-SPA/src/app/members/photo-editor/photo-editor.component.html
+++ b/DatingApp-SPA/src/app/members/photo-editor/photo-editor.component.html
@@ -1,4 +1,5 @@
 <div class="row">
+    
   <div class="col-sm-2" *ngFor="let photo of photos">
     <img src="{{photo.url}}" class="img-thumbnail p-1" alt="">
     <div class="text-center">
@@ -10,6 +11,7 @@
       (click)="deletePhoto(photo.id)"
       [disabled]="photo.isMain"><i class="fa fa-trash-o"></i></button>
     </div>
+    <!-- {{ photos | json }} -->
   </div>
 </div>
 
@@ -49,6 +51,7 @@
           </thead>
           <tbody>
           <tr *ngFor="let item of uploader.queue">
+              
               <td><strong>{{ item?.file?.name }}</strong></td>
               <td *ngIf="uploader.options.isHTML5" nowrap>{{ item?.file?.size/1024/1024 | number:'.2' }} MB</td>      
           </tr>
